--- a/Calc_Gauss/index.html
+++ b/Calc_Gauss/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Gauss</title>
     <link rel="stylesheet" href="style.css">
+    <title>Calculadora de Gauss</title>
 </head>
 <body>
+    <h1>Calculadora de Gauss</h1>
+    <p>Um software que calcula os valores de uma reta numerica a partir do teorema de Gauss</p> <br>
+
+    <p>
+        1° Número da sequência: <input type="number" id="n1">
+    </p>
+
+    <p>
+        2° Número da sequência: <input type="number" id="n2"> 
+    </p>
     <script src="script.js"></script>
 </body>
 </html>
