--- a/Calc_Gauss/html/index.html
+++ b/Calc_Gauss/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Calc_Gauss/css/style.css">
     <title>Calculadora de Gauss</title>
 </head>
 <body>
@@ -17,6 +17,9 @@
     <p>
         2° Número da sequência: <input type="number" id="n2"> 
     </p>
-    <script src="script.js"></script>
+
+    <button id="bt">Calcular</button>
+
+    <script src="/Calc_Gauss/js/script.js"></script>
 </body>
 </html>
