--- a/Calc_Gauss/html/index.html
+++ b/Calc_Gauss/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Calculadora de Gauss</h1>
-    <p>Um software que calcula os valores de uma reta numerica a partir do teorema de Gauss</p> <br>
+    <p>Um algoritmo que calcula os valores de uma reta numerica a partir do teorema de Gauss</p> <br>
 
     <p>
         1° Número da sequência: <input type="number" id="n1">
