--- a/Calc_Gauss/html/index.html
+++ b/Calc_Gauss/html/index.html
@@ -7,18 +7,22 @@
     <title>Calculadora de Gauss</title>
 </head>
 <body>
-    <h1>Calculadora de Gauss</h1>
-    <p>Um algoritmo que calcula os valores de uma reta numerica a partir do teorema de Gauss</p> <br>
+    <header>
+        <h1>Calculadora de Gauss</h1>
+        <p>Um algoritmo que calcula os valores de uma reta numerica a partir do teorema de Gauss</p> <br>
+    </header>
 
-    <p>
-        1° Número da sequência: <input type="number" id="n1">
-    </p>
-
-    <p>
-        2° Número da sequência: <input type="number" id="n2"> 
-    </p>
-
-    <button id="bt">Calcular</button>
+    <main>
+        <p>
+            1° Número da sequência: <input type="number" id="n1">
+        </p>
+    
+        <p>
+            2° Número da sequência: <input type="number" id="n2"> 
+        </p>
+    
+        <button id="bt">Calcular</button>
+    </main>
 
     <script src="/Calc_Gauss/js/script.js"></script>
 </body>
